Fixed admin console bug that wouldn't update routes

--- a/templates/routes.tmpl
+++ b/templates/routes.tmpl
@@ -96,7 +96,7 @@
         }
 
         $(document).on("click", "tr.client-row", function(e) {
-            $("#request-list > tr").removeClass("table-active");
+            $("#client-list > tr").removeClass("table-active");
             $(this).addClass("table-active");
             $("#route-list").html("");
             $("#route-table").show();
