Change to container-fluid for use full screen width.

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -51,5 +51,5 @@
         </ul>
     </div>
 </nav>
-<div id="pageContainer" class="container">
+<div id="pageContainer" class="container-fluid">
 {{ end }}
