Fix for table-responsive view of data console.

--- a/templates/console.tmpl
+++ b/templates/console.tmpl
@@ -1,7 +1,7 @@
 {{ define "console" }}
 {{ template "header" .}}
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 table-responsive">
         <table id="request-table" class="table table-hover">
             <thead class="thead-dark">
                 <tr>
