Update letsencypt documentation

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -17,6 +17,10 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Bootstrap End -->
 
+    <!-- Knockout Start -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
+    <!-- Knockout End -->
+
     <style>
         #pageContainer {
             padding-top: 60px;
@@ -51,5 +55,5 @@
         </ul>
     </div>
 </nav>
-<div id="pageContainer" class="container">
+<div id="pageContainer" class="container-fluid">
 {{ end }}
