Initial work on TCP/HTTP/Alias load balancing

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -31,6 +31,8 @@
         }
     </style>
 
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
     <script type="text/javascript">
         
     </script>
