--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -40,7 +40,7 @@
 
 <body>
 <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-primary" role="navigation">
-    <a class="navbar-brand" href="/_sish/console">sish</a>
+    <a class="navbar-brand" href="">sish</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
